--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native/metro-config": "^0.74.84",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.14",
+    "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
