--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "expo-web-browser": "~13.0.3",
     "i18next": "^23.11.5",
     "intl-pluralrules": "^2.0.1",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-native": "0.74.2",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-signin": "^2.1.1",
     "react-native-reanimated": "~3.10.1",
@@ -50,6 +52,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.5",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
