--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
+    "expo-image": "~1.12.12",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
     "expo-secure-store": "~13.0.1",
@@ -42,13 +43,13 @@
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-signin": "^2.1.1",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10",
-    "expo-image": "~1.12.12"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
