--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@os-team/i18next-react-native-language-detector": "^1.0.34",
     "@react-native/metro-config": "^0.74.84",
+    "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.14",
     "expo-auth-session": "^5.5.2",
